# babycarebot-3

./: .gitignore  .replit  DEPLOY_REPLIT.md  Dockerfile  README.md  README_GITHUB.md  README_SETUP.md  REPLIT_SETUP.md  VERCEL_POSTGRES_SETUP.md  babybot.db  babybot.session  config.env  init_db_replit.py  main.py  main_replit.py  pyproject.toml  replit.nix  replit_start.py  requirements.txt  requirements_replit_bot.txt  run.sh  run_web.py  start_replit.py  vercel.json
mini_app/: README.md  app.py  app_replit.py  app_vercel.py  requirements.txt
mini_app/templates/: dashboard.html
