[tool.poetry]
name = "babycarebot"
version = "2.0.0"
description = "Telegram bot for baby care with web dashboard"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
telethon = "^1.28.5"
python-dotenv = "^1.0.0"
APScheduler = "^3.10.4"
pytz = "^2023.3"
Flask = "^2.3.3"
Werkzeug = "^2.3.7"

[tool.poetry.dev-dependencies]
pytest = "^6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
