[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "babycarebot"
version = "1.2.0"
description = "Telegram bot for baby care coordination"
authors = [{name = "BabyCareBot Team"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "telethon>=1.28.5",
    "python-dotenv>=1.0.0",
    "APScheduler>=3.10.4",
    "pytz>=2023.3",
    "Flask>=2.3.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*", "venv*", ".git*"]

[tool.black]
line-length = 88
target-version = ['py39']
